import org.gradle.internal.os.OperatingSystem

project.ext.targetPlatform = OperatingSystem.current()
switch (targetPlatform) {
	case OperatingSystem.WINDOWS:
		project.ext.lwjglNatives = "natives-windows"
		break
	case OperatingSystem.LINUX:
		project.ext.lwjglNatives = "natives-linux"
		break
	case OperatingSystem.MAC_OS:
		project.ext.lwjglNatives = "natives-macos"
		break
}

subprojects {

	apply plugin: 'java-library'

	version "1.1.0"

	sourceCompatibility = 14
	targetCompatibility = 14

	java {
		modularity.inferModulePath = true
	}

	tasks.withType(JavaCompile) {
		options.compilerArgs += "--enable-preview"
	}
	tasks.withType(Test) {
		jvmArgs += "--enable-preview"
	}
	tasks.withType(JavaExec) {
		jvmArgs += "--enable-preview"
	}

	afterEvaluate {
		repositories {
			jcenter()
			maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
			maven {
				url "https://maven.pkg.github.com/ealrann/emf-standalone"
				credentials {
					username = "ealrann"
					// Public token with 'read:packages' scope, see https://github.com/jcansdale-test/gradle-java-consume
					password = "&#97;&#49;&#99;&#55;&#101;&#97;&#52;&#100;&#100;&#97;&#56;&#102;&#57;&#50;&#54;&#100;&#48;&#56;&#52;&#48;&#48;&#50;&#48;&#56;&#98;&#52;&#51;&#55;&#101;&#48;&#102;&#48;&#49;&#101;&#100;&#50;&#51;&#102;&#97;&#52;"
				}
			}
		}
	}
}
